[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.41.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "streamlit-folium>=0.25.3",
    "streamlit>=1.50.0",
    "requests>=2.32.5",
    "plotly>=6.3.1",
    "folium>=0.20.0",
]
